# Bedrock

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  INSTALL.md  LICENSE  PLAN.md  README.md  STATE.md  pyproject.toml
.claude/: launch.json
.githooks/: README.md  post-commit  pre-commit
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: bot.yaml  bot_whitelist.yaml  fetch.yaml
config/calendars/: usda.yaml
config/defaults/: base.yaml  family_agri.yaml  family_financial.yaml
config/instruments/: audusd.yaml  brent.yaml  btc.yaml  cocoa.yaml  coffee.yaml  copper.yaml  corn.yaml  cotton.yaml  crudeoil.yaml  eth.yaml  eurusd.yaml  gbpusd.yaml  gold.yaml  nasdaq.yaml  naturalgas.yaml  platinum.yaml  silver.yaml  soybean.yaml  sp500.yaml  sugar.yaml  usdjpy.yaml  wheat.yaml
data/: bedrock.db  signals_bot.json
data/_meta/: compare_baseline_2026-04-25.md  monitor_baseline_2026-04-25.json  sugar_floor_history.jsonl
data/bot/: README.md
data/manual/: README.md  comex_inventory.csv  conab_estimates.csv  cot_euronext.csv  cot_ice.csv  crypto_sentiment.csv  disease_alerts.csv  eia_inventory.csv  export_events.csv  iri_enso_forecast.csv  ism_pmi.csv  news_intel.csv  seismic_events.csv  shipping_indices.csv  unica_reports.csv
docs/: 12_10_followup_kickoff_prompt.md  12_10_followup_spor_b_c_d_e_f_kickoff.md  12_10_followup_spor_f_kickoff.md  12_10_kickoff_prompt.md  12_6_analyzer_plan.md  12_6_cross_correlation.md  12_6_ic_table.md  12_6_post_rebalansering_grade_dist.md  12_7_grade_validation.md  analog_direction_aware_diff_2026-04-26.md  architecture.md  backfill.md  backfill_2026-04.md  backtest_2026-04_gold-corn.md  backtest_2026-04_orchestrator-replay.md  backtest_corn_validation_2026-04.md  backtest_fase11_full.md  backtest_phase_d_2026-04.md  backtest_session90_full.md  backtest_sugar_full_2026-05.md  backtest_sugar_horizons_2026-05.md  backtest_sugar_post_enso_fix_2026-05.md  backtest_sugar_post_fixes_2026-05.md  backtest_sugar_v6_full_2026-05.md  backtest_sugar_v7_full_2026-05.md  backtest_whitelist_2026-04-26.md  bedrock_bot_cutover.md  bot_running.md  branch_strategy.md  bunke_3_4_7_history_2026-05-02.md  cloud_harvest_runbook.md  codebase_audit_2026_04_30.md  commit_convention.md  d1_grade_distribution.md  d2_grade_distribution.md  data_audit_2026-04.md  data_contract.md  data_coverage_2026-05-01.md  data_gaps_2026-04.md  data_utilization_report_2026-05-01.md  (+48 more)
docs/decisions/: 001-one-engine-two-aggregators.md  002-sqlite-instead-of-duckdb.md  003-gates-via-named-registry-not-dsl.md  004-python-3-10-baseline.md  005-analog-data-schema.md  006-direction-asymmetric-scoring.md  007-fetch-port-strategy.md  008-fetch-port-mapping.md  009-cutover-readiness.md  010-horizon-aware-driver-pattern.md  011-backfill-policy.md  014-econ-surprise-cross-source.md  015-monitor-stale-hours-source-lag.md  README.md
docs/migration/: bot_refactor.md
scripts/: analyze_broker_costs.py  analyze_capital_requirement.py  analyze_cross_correlations.py  analyze_driver_performance.py  analyze_r_multiples.py  backfill_cftc_name_drift.py  backfill_comtrade_india_sugar.py  backfill_conab_cafe.py  backfill_euronext_optimized.py  backfill_lost_close_pnl.py  backfill_tier2_history.py  backfill_usgs_seismic_history.py  backtest_corn_validation.py  backtest_fase11_full.py  backtest_phase_d_session116.py  backtest_session90_full.py  backtest_sugar_full.py  backtest_sugar_parallel.py  backtest_whitelist_session99.py  bedrock_widget_launch.sh  cleanup_dangling_trades.py  codespace_keepalive.sh  compare_signals_daily.py  compute_instrument_data_starts.py  harvest_driver_observations.py  harvest_feature_snapshots.py  ingest_manual_data.py  install_precommit_in_worktree.sh  merge_duplicate_log_entries.py  monitor_alert.sh  monitor_pipeline.py  render_phase_d_report.py  report_data_coverage.py  run_backfill.sh  run_full_history_harvest.sh  run_parallel_harvest.sh  run_tier2_backfill.sh  session_health.sh  signals_bot_regen.sh  spike_session95a_buy_sell_asymmetry.py  (+10 more)
scripts/analysis/: data_utilization_report.py  driver_balance_report.py  grade_distribution_d1.py  grade_distribution_d2.py  grade_validation_12_7.py
scripts/backfill/: aaii.py  agsi.py  alsi.py  bunke4_data.py  cecafe_exports.py  cot_disaggregated_metadata.py  cot_tff.py  drought_monitor.py  dxy_yahoo.py  econ_actuals.py  eia_bunke6.py  eia_natgas_processing.py  fas_esr.py  fred_b1.py  fred_bunke3.py  fred_econ_surprise.py  iip.py  iri_enso_forecast.py  ism_pmi.py  nass_yield_stocks.py  treasury_auctions.py  unica_history.py  vix_term.py  weather_monthly_brazil_centro_sul.py  weather_monthly_sugar_regions.py  weather_ng.py
scripts/smoke/: a10_cecafe.py  a11_ice_certified_stocks.py  a12_aaii_sentiment.py  a1_baker_hughes.py  a2_agsi_eu_gas.py  a3_fas_export_sales.py  a4_cftc_tff.py  a5_a7_etf_holdings.py  a8_nopa_crush.py  a9_drought_monitor.py  b1_fred_extension.py  b2_vix_term.py  b3_dxy_yahoo.py  b5_calendar_spreads.py
scripts/snapshot/: score_baseline.py
src/bedrock/: __init__.py
systemd/: README.md  bedrock-bot.service  bedrock-compare.service  bedrock-compare.timer  bedrock-fetch-cot_disaggregated.service  bedrock-fetch-cot_disaggregated.timer  bedrock-fetch-cot_legacy.service  bedrock-fetch-cot_legacy.timer  bedrock-fetch-fundamentals.service  bedrock-fetch-fundamentals.timer  bedrock-fetch-prices.service  bedrock-fetch-prices.timer  bedrock-fetch-weather.service  bedrock-fetch-weather.timer  bedrock-monitor-alert.service  bedrock-monitor-alert.timer  bedrock-monitor.service  bedrock-monitor.timer  bedrock-notify@.service  bedrock-rolling-floor-sugar.service  bedrock-rolling-floor-sugar.timer  bedrock-server.service  bedrock-signals-all.service  bedrock-signals-all.timer  bedrock-signals-bot-intraday.service  bedrock-signals-bot-intraday.timer  bedrock-signals-bot-morning.service  bedrock-signals-bot-morning.timer
tests/: conftest.py
tests/logical/: test_currency_drivers.py  test_orchestrator_analog.py  test_trend_drivers.py  (+2 more)
web/: admin.html  index.html  widget.html
(+341 files in other folders)
