[project]
name = "bedrock"
version = "0.0.1"
description = "Config-drevet trading-system med asymmetriske setups og cTrader-bot"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [{name = "Snkpipefish"}]

dependencies = [
    # Core
    "pydantic>=2.9,<3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",

    # Data + historikk (SQLite via stdlib — se ADR-002 for hvorfor ikke
    # DuckDB/pyarrow: produksjons-hardwaren mangler SSE4.2/AVX)
    "pandas>=2.2",
    "numpy>=2.2,<2.3",  # SIMD-sensitive, pin upper bound (ADR-002)

    # HTTP / nettverk
    "requests>=2.32",
    "urllib3>=2.0",
    "tenacity>=9.0",

    # Server
    "flask>=3.0",

    # Logging
    "structlog>=24.4",

    # CLI
    "click>=8.1",
]

[project.optional-dependencies]
# Bot-spesifikke (cTrader Open API)
bot = [
    "ctrader-open-api>=0.9.2",
    "twisted>=24.3",
    "protobuf>=6.0",
    "service_identity>=24.0",
]

# Dev-verktøy
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "pyright>=1.1.383",
    "yamllint>=1.35",
    "pre-commit>=3.8",
    "commitizen>=3.29",
]

[project.scripts]
bedrock = "bedrock.cli.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bedrock"]

# ─── Ruff ───────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "C4",   # comprehensions
    "UP",   # pyupgrade
    "SIM",  # simplify
    "TID",  # tidy imports
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # linelength — håndtert av formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert OK i tester

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── Pyright ────────────────────────────────────────────────────────────
[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

# ─── Pytest ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: tester som tar > 1 sekund",
    "integration: fuller pipeline-tester",
    "backtest: kjører mot historikk",
]

# ─── Coverage ───────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/bedrock"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# ─── Commitizen ─────────────────────────────────────────────────────────
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
bump_message = "chore(release): bump version to $new_version"
